--- a/client/vues/application/styles/style.css
+++ b/client/vues/application/styles/style.css
@@ -2,5 +2,42 @@
 padding-top:100px;
 }
 
+
+table
+{
+    border-collapse: collapse;
+	/*text-align:center;*/
+}
+td, th /* Mettre une bordure sur les td ET les th */
+{
+    border: 1px solid black;
+	text-align:center;
+}
+
+.filterable {
+    margin-top: 15px;
+}
+.filterable .panel-heading .pull-right {
+    margin-top: -20px;
+}
+.filterable .filters input[disabled] {
+    background-color: transparent;
+    border: none;
+    cursor: auto;
+    box-shadow: none;
+    padding: 0;
+    height: auto;
+}
+.filterable .filters input[disabled]::-webkit-input-placeholder {
+    color: #333;
+}
+.filterable .filters input[disabled]::-moz-placeholder {
+    color: #333;
+}
+.filterable .filters input[disabled]:-ms-input-placeholder {
+    color: #333;
+}
+
+
 .btn-glyphicon { padding:8px; background:#ffffff; margin-right:4px; }
 .icon-btn { padding: 1px 15px 3px 2px; border-radius:50px;}
