--- a/client/vues/application/styles/style.css
+++ b/client/vues/application/styles/style.css
@@ -2,7 +2,6 @@
 padding-top:100px;
 }
 
-
 table
 {
     border-collapse: collapse;
@@ -13,6 +12,20 @@ td, th /* Mettre une bordure sur les td ET les th */
     border: 1px solid black;
 	text-align:center;
 }
+
+.informationEtu li {
+		font-size:14px;
+		margin-bottom:10px;
+		overflow: hidden;
+	}
+	.informationEtu li label {
+		float:left;
+		-moz-border-radius: 3px;
+		-webkit-border-radius: 3px;
+	}
+	.informationEtu li span {
+		width:150px;
+	}
 
 .filterable {
     margin-top: 15px;
