Possibilité d'inscrire des étudiants dans la base Mongo ET à un semestre via un fichier Excel

--- a/client/vues/application/styles/style.css
+++ b/client/vues/application/styles/style.css
@@ -16,6 +16,10 @@ td, th /* Mettre une bordure sur les td ET les th */
 	margin: 2px;
 }
 
+textarea {
+	resize: none;
+}
+
 .informationEtu li {
 		font-size:14px;
 		margin-bottom:10px;
